crates/test-harness/fixtures/test262-lite/fail/runtime/const-assignment.js
/*---
description: assignment to const should fail at runtime
negative:
  phase: runtime
  type: TypeError
---*/
const x = 1;
x = 2;
